--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +22,15 @@
   "dependencies": {
     "@types/jest": "^29.5.7",
     "jest": "^29.7.0",
+    "rollup": "^4.4.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
+    "@rollup/plugin-typescript": "^11.1.5",
     "babel-jest": "^29.7.0"
   }
 }
